Wrap contact details in <address> tag (fix ML-42)

--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -87,6 +87,7 @@
   --line-weight: 1px;
 }
 a,
+address,
 article,
 aside,
 blockquote,
